<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/holidaysTitle"
                style="@style/TextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_holidays"
                />

            <LinearLayout
                android:id="@+id/holidaysContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

            </LinearLayout>

            <TextView
                style="@style/TextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_number_of_days"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_days_total"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfDay"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_working_days"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfWorkingDay"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_non_working_days"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfNonWorkingDay"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <TextView
                style="@style/TextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_number_of_working_hours"
                android:layout_marginTop="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_working_hours_40h"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfWorkingHours40"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_working_hours_36h"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfWorkingHours36"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_number_of_working_hours_24h"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/numberOfWorkingHours24"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="31"
                    />

            </LinearLayout>

            <TextView
                style="@style/TextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_other"
                android:layout_marginTop="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_quarter"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/quarter"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="2"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tilel_half_year"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/halfYear"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >

                <TextView
                    style="@style/TextBody"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_year"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/year"
                    style="@style/TextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="2017"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>